box selection starting point in the file requester #40549

Closed
opened 2014-06-09 14:47:30 +02:00 by Fazekas Laszlo · 5 comments
Member

System Information
Operating system and graphics card
Ubuntu 14.04 NVidia 440

Blender Version
0ae8ce3
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

Short description of error
Load file: if you drag the mouse with pressed button over the file list, after a short movement you get a selection rectangle to select more file names together. But the box's starting corner is not where the mouse was when you pressed the button. Instead, it's the position where the mouse was when the threshold movement accepted. Because of this, the first item in the box is sometimes not selected.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps
Go to file->open, press LMB on a filename (better to click on the lower half of the item), then drag the mouse with pressed button. The selection rectangle starts after a delay and if your mouse is already out of the item's row, it won't be selected.

**System Information** Operating system and graphics card Ubuntu 14.04 NVidia 440 **Blender Version** 0ae8ce3 Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) **Short description of error** Load file: if you drag the mouse with pressed button over the file list, after a short movement you get a selection rectangle to select more file names together. But the box's starting corner is not where the mouse was when you pressed the button. Instead, it's the position where the mouse was when the threshold movement accepted. Because of this, the first item in the box is sometimes not selected. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps Go to file->open, press LMB on a filename (better to click on the lower half of the item), then drag the mouse with pressed button. The selection rectangle starts after a delay and if your mouse is already out of the item's row, it won't be selected.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @totoro-4

Added subscriber: @totoro-4
Bastien Montagne self-assigned this 2014-06-09 15:26:51 +02:00

This issue was referenced by f1f33ba7be

This issue was referenced by f1f33ba7be2d6c1c1f79c1f833543948f9b3bb79

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit f1f33ba7be.

Closed by commit f1f33ba7be.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40549
No description provided.